# utils

./: .clang-format  .gitignore  .markdownlint-cli2.jsonc  .markdownlint-rule-no-squashed-file-references.mjs  .markdownlint.json  .repo-shared-ignore  AGENTS.md  CLAUDE.md  DEVELOPMENT.md  DEVELOPMENT_AGENT.md  DEVELOPMENT_SHARED.md  DEVELOPMENT_SHARED_AGENT.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: test.yml
Applications/BorgAdm.app/Contents/: Info.plist
Applications/BorgAdm.app/Contents/MacOS/: BorgAdm  BorgAdm.c
Applications/Crony.app/Contents/: Info.plist
Applications/Crony.app/Contents/MacOS/: Crony.c
_repo_shared/: repo-shared
_repo_shared/dotfiles/: markdownlint-cli2.jsonc  markdownlint-rule-no-squashed-file-references.mjs  markdownlint.json
_repo_shared/dottemplates/: gitignore
_repo_shared/files/: AGENTS.md  DEVELOPMENT.md  DEVELOPMENT_AGENT.md  DEVELOPMENT_SHARED.md  DEVELOPMENT_SHARED_AGENT.md
_repo_shared/files/_repo_shared/: repo-shared
_repo_shared/templates/: CLAUDE.md
_repo_shared/tests/: test_code_quality.py  test_in_sync.py  test_markdown_format.py  test_markdownlint.py  test_repo_shared_drift.py
docs/: borgadm.md  crony.md  darwin-tz-watchdog.md  firefox-cookies.md  linkfiles.md  secure-archiver.md
scripts/: pandoc  pandoc-pin.json  readme-intro.md  render-docs
share/man/man1/: borgadm.1  crony.1  darwin-tz-watchdog.1  firefox-cookies.1  linkfiles.1  secure-archiver.1
src/: binfiles.py  borgadm.py  darwin_tz_watchdog.py  firefox_cookies.py  linkfiles.py  pandoc.py  render_docs.py  secure_archiver.py
src/common/: __init__.py  argparse_ext.py  cli.py  crony_automate.py  docspec.py  exitcodes.py  helpref.py
src/crony/: __init__.py  cli.py  commands.py  config.py  default_config.toml  errors.py  model.py  notify.py  paths.py  runner.py  runtime.py  snapshot.py  unit.py
src/crony/platform/: __init__.py  darwin.py  fda.py  host.py  launchd.py  linux.py  scheduler.py  systemd.py
src/secure-archiver/: default_config.toml
tests/: conftest.py  conftest_crony.py  crony_automate_base.py  linux-docker-test.sh  run_all.py  test_binfiles.py  test_borgadm.py  test_clang_format.py  test_common_argparse_ext.py  test_common_crony_automate.py  test_common_exitcodes.py  test_common_helpref.py  test_crony.py  test_crony_cli.py  test_crony_commands.py  test_crony_config.py  test_crony_e2e.py  test_crony_errors.py  test_crony_fda.py  test_crony_model.py  test_crony_notify.py  test_crony_paths.py  test_crony_platform.py  test_crony_platform_host_darwin.py  test_crony_platform_host_linux.py  test_crony_platform_launchd.py  test_crony_platform_systemd.py  test_crony_runner.py  test_crony_runtime.py  test_crony_unit.py  test_darwin_tz_watchdog.py  test_dotfiles.py  test_firefox_cookies.py  test_linkfiles.py  test_pandoc.py  test_render_docs.py  test_run_all.py  test_secure_archiver.py
