[project]
name = "utils"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "epilatow-repo-shared",
    "pytest>=9.0.3",
]

[tool.uv.sources]
epilatow-repo-shared = { git = "https://github.com/epilatow/repo-shared", rev = "6a008dc01c79947f820fd25bc9e9cce7e0a0f9e0" }

[tool.pytest.ini_options]
testpaths = ["_repo_shared/tests"]

[tool.repo-shared.markdown]
# Repo's pre-existing markdown was wrapped at 78. Pinned here so a
# repo-shared bump that changed the shared default to 79 doesn't
# reflow every line in the repo's *.md content.
wrap = 78

[tool.repo-shared.code-quality]
# bin/* are shebang-based scripts without ``.py`` extensions, so
# ruff's directory auto-discovery skips them. List them in
# ``python-targets`` (additive to discovery) so ruff + mypy cover
# the same Python surface. ``bin/binfiles`` is a symlink to
# ``bin/dotfiles`` and rejected by the validator -- it's left out.
# ``tests/`` is picked up by discovery automatically.
python-targets = [
    "bin/borgadm",
    "bin/crony",
    "bin/dotfiles",
    "bin/firefox-cookies",
    "bin/secure-archiver",
]
