[project]
name = "utils"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = [
    "epilatow-repo-shared",
    "pytest>=9.0.3",
]

[tool.uv.sources]
epilatow-repo-shared = { git = "https://github.com/epilatow/repo-shared", rev = "ef6cbb229981b711f1b06735b19a8ddfc4d23f6d" }

[tool.mypy]
# First-party shared packages live under src/ (e.g. `common`). The
# code-quality gate runs `mypy --strict <file>` from the repo root, so
# mypy reads this config; mypy_path lets it resolve `import common`
# statically (the entry scripts add src/ to sys.path at runtime, which
# mypy does not execute).
mypy_path = ["src"]

[tool.pytest.ini_options]
testpaths = ["_repo_shared/tests"]
markers = [
    "e2e: end-to-end tests that subprocess the script under test (slow; opt-in via --e2e)",
]

[tool.repo-shared.markdown]
# Repo's pre-existing markdown was wrapped at 78. Pinned here so a
# repo-shared bump that changed the shared default to 79 doesn't
# reflow every line in the repo's *.md content.
wrap = 78

[tool.repo-shared.code-quality]
# Most bin/* entries are shebang scripts without a ``.py`` extension,
# which ruff/mypy auto-discovery (it globs ``*.py``) can't see. Each is
# exposed to discovery -- and made importable as a typed module by the
# tests -- via a ``src/<module>.py`` symlink to it, resolved against
# ``[tool.mypy] mypy_path = ["src"]``. ``bin/crony`` is the exception:
# its logic lives in the ``src/crony`` package, so a ``src/crony.py``
# alias would collide with that package; it stays a manual target here.
# ``tests/`` is picked up by discovery automatically.
python-targets = [
    "bin/crony",
]
